fix(play) to work on Safari

--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 body {
   display: flex;
   flex-direction: column;
-  min-width: 375px;
+  min-width: 300px;
 }
 
 header {
@@ -62,8 +62,8 @@ footer a {
   width: 80vw;
   height: 80vw;
   position: absolute;
-  min-width: 350px;
-  min-height: 350px;
+  min-width: 300px;
+  min-height: 300px;
   max-width: min(80vmin, 1000px);
   max-height: min(80vmin, 1000px);
 }
@@ -94,7 +94,7 @@ footer a {
   border-radius: 0 0 0 100%;
   margin: 0 0 20px 20px;
   background-color: yellow;
-  border: thick solid rgb(130, 124, 13);
+  border: thick solid rgb(94, 90, 10);
 }
 
 .button-bottom-right {
@@ -144,7 +144,7 @@ footer a {
   transform: translateX(-50%) translateY(-50%);
 }
 
-@media (max-height: 600px) {
+@media (max-height: 500px) {
   header {
     display: none;
   }
